test/JDBC/expected/datediff_big-vu-verify.out
SELECT * FROM datediff_big_vu_prepare_v1
GO
~~START~~
bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint
1000#!#4000#!#12000#!#365243#!#365243#!#52177#!#8765832#!#525949920#!#31556995200#!#31556995200000#!#31556995200000000#!#6311433600000000000
~~END~~


SELECT * FROM datediff_big_vu_prepare_v2
GO
~~ERROR (Code: 8115)~~

~~ERROR (Message: bigint out of range)~~


SELECT * FROM datediff_big_vu_prepare_v3
GO
~~START~~
bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint
200#!#803#!#2411#!#73413#!#73413#!#10487#!#1761912#!#105714720#!#6342883200#!#6342883200000#!#6342883200000000#!#6342883200000000000
~~END~~


SELECT * FROM datediff_big_vu_prepare_v4
GO
~~START~~
bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint
200#!#803#!#2411#!#73413#!#73413#!#10487#!#1761912#!#105714720#!#6342883200#!#6342883200000#!#6342883200000000#!#6342883200000000000
~~END~~


SELECT * FROM datediff_big_vu_prepare_v5
GO
~~START~~
bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint
100#!#396#!#1189#!#36160#!#36160#!#5165#!#867840#!#52070401#!#3124224060#!#3124224060000#!#3124224060000000#!#3124224060000000000
~~END~~


SELECT * FROM datediff_big_vu_prepare_v6
GO
~~START~~
bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint
200#!#800#!#2400#!#73048#!#73048#!#10435#!#1753152#!#105189120#!#6311347200#!#6311347200000#!#6311347200000000#!#6311347200000000000
~~END~~


SELECT * FROM datediff_big_vu_prepare_v7
GO
~~START~~
bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint
179#!#717#!#2153#!#65535#!#65535#!#9362#!#1572863#!#94371839#!#5662310340#!#5662310340000#!#5662310340000000#!#5662310340000000000
~~END~~


SELECT * FROM datediff_big_vu_prepare_v8
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: "time" units "year" not recognized)~~


SELECT * FROM datediff_big_vu_prepare_v9
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: operator is not unique: time without time zone sys.- time without time zone)~~


SELECT * FROM datediff_big_vu_prepare_v10
GO
~~START~~
bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint
179#!#717#!#2153#!#65535#!#65535#!#9362#!#1572851#!#94371108#!#5662266480#!#5662266480000#!#5662266480000000#!#5662266480000000000
~~END~~


SELECT * FROM datediff_big_vu_prepare_v11
GO
~~START~~
bigint#!#bigint#!#bigint
<NULL>#!#<NULL>#!#<NULL>
~~END~~


SELECT * FROM datediff_big_vu_prepare_v13
GO
~~START~~
bigint#!#bigint#!#bigint#!#bigint
0#!#366#!#739013#!#3652424
~~END~~


EXEC datediff_big_vu_prepare_p1
GO
~~START~~
bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint
1000#!#4000#!#12000#!#365243#!#365243#!#52177#!#8765832#!#525949920#!#31556995200#!#31556995200000#!#31556995200000000#!#6311433600000000000
~~END~~


EXEC datediff_big_vu_prepare_p2
GO
~~ERROR (Code: 8115)~~

~~ERROR (Message: bigint out of range)~~


EXEC datediff_big_vu_prepare_p3
GO
~~START~~
bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint
200#!#803#!#2411#!#73413#!#73413#!#10487#!#1761912#!#105714720#!#6342883200#!#6342883200000#!#6342883200000000#!#6342883200000000000
~~END~~


EXEC datediff_big_vu_prepare_p4
GO
~~START~~
bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint
200#!#803#!#2411#!#73413#!#73413#!#10487#!#1761912#!#105714720#!#6342883200#!#6342883200000#!#6342883200000000#!#6342883200000000000
~~END~~


EXEC datediff_big_vu_prepare_p5
GO
~~START~~
bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint
100#!#396#!#1189#!#36160#!#36160#!#5165#!#867840#!#52070401#!#3124224060#!#3124224060000#!#3124224060000000#!#3124224060000000000
~~END~~


EXEC datediff_big_vu_prepare_p6
GO
~~START~~
bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint
200#!#800#!#2400#!#73048#!#73048#!#10435#!#1753152#!#105189120#!#6311347200#!#6311347200000#!#6311347200000000#!#6311347200000000000
~~END~~


EXEC datediff_big_vu_prepare_p7
GO
~~START~~
bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint
179#!#717#!#2153#!#65535#!#65535#!#9362#!#1572863#!#94371839#!#5662310340#!#5662310340000#!#5662310340000000#!#5662310340000000000
~~END~~


EXEC datediff_big_vu_prepare_p8
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: "time" units "year" not recognized)~~


EXEC datediff_big_vu_prepare_p9
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: "time" units "year" not recognized)~~


EXEC datediff_big_vu_prepare_p10
GO
~~START~~
bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint#!#bigint
179#!#717#!#2153#!#65535#!#65535#!#9362#!#1572851#!#94371108#!#5662266480#!#5662266480000#!#5662266480000000#!#5662266480000000000
~~END~~


EXEC datediff_big_vu_prepare_p11
GO
~~START~~
bigint#!#bigint#!#bigint
<NULL>#!#<NULL>#!#<NULL>
~~END~~


EXEC datediff_big_vu_prepare_p12
GO
~~ERROR (Code: 33557097)~~

~~ERROR (Message: syntax error at or near "NULL")~~


EXEC datediff_big_vu_prepare_p13
GO
~~START~~
bigint#!#bigint#!#bigint#!#bigint
0#!#366#!#739013#!#3652424
~~END~~

